--- a/src/Equilobe.TemplateService.Core/Equilobe.TemplateService.Core.csproj
+++ b/src/Equilobe.TemplateService.Core/Equilobe.TemplateService.Core.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -13,5 +13,6 @@
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
       <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+      <PackageReference Include="SystemTextJsonPatch" Version="3.2.1" />
   </ItemGroup>
 </Project>
