--- a/src/Equilobe.TemplateService/appsettings.json
+++ b/src/Equilobe.TemplateService/appsettings.json
@@ -5,7 +5,36 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "CorsAllow": [ "http://localhost:4200" ],
+    "Serilog": {
+        "Using": [
+            "Serilog.Sinks.Console",
+            "Serilog.Sinks.File"
+        ],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "Microsoft.AspNetCore": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console"
+            },
+            {
+                "Name": "File",
+                "Args": {
+                    "Path": "logs/log-.jsonl",
+                    "RollingInterval": "Day",
+                    "RollOnFileSizeLimit": true,
+                    "Formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+                }
+            }
+        ]
+    },
+    "CorsAllow": [
+        "http://localhost:4200"
+    ],
     "AllowedHosts": "*",
     "Auth0": {
         "Authority": "",
